--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   },
   "standard": {
     "env": [
-      "jest"
+      "jest",
+      "browser"
+    ]
+  },
+  "jest": {
+    "setupFiles": [
+      "jest-localstorage-mock"
     ]
   },
   "repository": {
@@ -25,9 +31,13 @@
     "url": "https://github.com/KoolTheba/todos-goals-api-localstorage/issues"
   },
   "homepage": "https://github.com/KoolTheba/todos-goals-api-localstorage#readme",
+  "dependencies": {
+    "uuid": "^8.3.1"
+  },
   "devDependencies": {
     "husky": "^4.3.0",
     "jest": "^26.4.2",
+    "jest-localstorage-mock": "^2.4.3",
     "standard": "^14.3.4"
   },
   "husky": {
